--- a/plugins/grogg19/projects/controllers/projectscontroller/create.htm
+++ b/plugins/grogg19/projects/controllers/projectscontroller/create.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('grogg19/projects/projectscontroller') ?>">ProjectsController</a></li>
+        <li><a href="<?= Backend::url('grogg19/projects/projectscontroller') ?>"><?= e(trans('grogg19.projects::lang.plugin.projects')) ?></a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
