feat(labels): Правки текстов всплывающих подписей

--- a/themes/Jusikd_theme/pages/index.htm
+++ b/themes/Jusikd_theme/pages/index.htm
@@ -3,4 +3,11 @@ url = "/"
 layout = "main_template"
 description = "Персональная страница Девятовой Юлии"
 is_hidden = 0
+
+[projectsList]
+projectPage = "develop"
+thumbMode = "auto"
+thumbWidth = 640
+thumbHeight = 480
+projectsOnPage = 12
 ==
